# futball-manager

./: .dockerignore  .gitignore  .hintrc  Dockerfile  README.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_players.py  002_users_and_player_audit.py  003_create_refresh_tokens.py  004_match_day.py  005_match_day_draw_settings.py  006_players_skill_stars_nullable.py  007_match_day_lineup_draft.py  008_match_day_draw_signatures.py  009_match_day_king_state.py  010_match_day_close.py  011_partida_board_unlocked.py
backend/app/: __init__.py  main.py  static_site_mount.py
backend/app/api/: db_commit_scope.py  deps.py
backend/app/api/routes/: auth.py  matchday.py  (+4 more)
backend/app/core/: config.py  postgres_url.py  timezone_helpers.py
backend/app/domain/: exceptions.py  permissions.py  player.py  user.py
backend/app/ports/: jwt_access_token.py  match_day_repository.py  password_hasher.py  player_repository.py  refresh_token_repository.py  user_repository.py
backend/app/startup/: __init__.py  logging_config.py  super_admin_bootstrap.py
backend/tests/: conftest.py  test_auth_http.py  test_auth_service.py  test_day_close_report_builder.py  test_health.py  test_king_queue_rotation.py  test_match_day_close_http.py  test_match_day_recent_sessions_http.py  test_matchday_http.py  test_permissions.py  test_player_service.py  test_players_http.py  test_session_date_policy.py  test_team_draw_balancer.py  test_user_admin_service.py
(+167 files in other folders)
